Сделал Большое описание, нужны тесты и доработки

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
-1) Сделать адаптацию страницы с Событием
-2) Доверстать Футер
+- главная 
+- события (юс , гдб) 
+- платежная 
+- устав и т д 
+- календарь
